# TelegramTalksToAgents

./: .gitignore  README.md  agent.py  main.py  pyproject.toml  telegram_bot.py  test.py
config/: models.json  profiles.yaml
core/: context.py  loop.py  session.py  strategy.py
mcp/: calculator_server.py  data_model.py  doc_search_server.py  gsheet_server.py  talk2mcp.py  web_search_server.py
modules/: action.py  decision.py  memory.py  model_manager.py  perception.py  tools.py
